--- a/ProjetEAI-war/web/index.html
+++ b/ProjetEAI-war/web/index.html
@@ -55,16 +55,9 @@
                             <label class="checkbox-inline"><input type="checkbox" value="">Lunch</label>
                             <label class="checkbox-inline"><input type="checkbox" value="">Repas assis</label>	
                             </br>	
-                            <label>Boissons cocktail :</label>
-                            <label class="checkbox-inline"><input type="checkbox" value="">Cocktail préparé</label>
-                            <label class="checkbox-inline"><input type="checkbox" value="">3 apéritifs</label>
+                            <label>Boissons :</label>
+                            <label class="checkbox-inline"><input type="checkbox" value="">Cocktail maison</label>
                             </br>	
-                            <label>Vins Lunch :</label>
-                            <label class="checkbox-inline"><input type="checkbox" value="">Blanc sec</label>
-                            <label class="checkbox-inline"><input type="checkbox" value="">Rouge</label>
-                            <label class="checkbox-inline"><input type="checkbox" value="">Rosé</label>
-                            <label class="checkbox-inline"><input type="checkbox" value="">Crémant</label>
-                            <label class="checkbox-inline"><input type="checkbox" value="">Champagne</label>
                         </div>
 
                         <div class="form-group">	
@@ -89,7 +82,7 @@
                         <div>	
                             <form action="/ProjetEAI-war/ApplicationEmployes" method="get">
                           
-                                <input class="btn btn-lg btn-block btn-info"  type="submit" name="type" value="CreerContrat">
+                                <input class="btn btn-lg btn-block btn-info"  type="submit" name="type" value="creerContrat">
                             </form>
                             
                         </div>
